<resources>
    <string name="app_name">Text To Speech</string>
    <string name="app_ui_crash">App/UI crashed</string>
    <string name="sorry_string">Sorry, that should not have happened.</string>
    <string name="error_report_button_text">Report this error via e-mail</string>
    <string name="error_report_button_telegram">Report this error via telegram</string>
    <string name="copy_format">Copy formatted report</string>
    <string name="error_report_open_issue_button_text">Report</string>
    <string name="error_report_open_github_notice">Please check whether an issue discussing your crash already exists.</string>
    <string name="what_device_headline">Info:</string>
    <string name="what_happened_headline">What happened:</string>
    <string name="info_labels">What:\\nRequest:\\nGMT Time:\\nPackage:\\nVersion:\\nOS version:\\nDevice:\\nModel:\\nProduct:</string>
    <string name="your_comment">Your comment (in English):</string>
    <string name="error_details_headline">Details:</string>
    <string name="error_report_title">Error report</string>
    <string name="crash_report_copied">Crash report copied to clipboard</string>
    <string name="error_snackbar_message">Sorry, something went wrong.</string>
    <string name="error_snackbar_action">Report</string>
    <string name="record_and_change_voice">Record \n&amp; Change voice</string>
    <string name="voice_change">Voice Change</string>
    <string name="voice_changer">Voice Changer</string>
    <string name="ambient_sound">Ambient Sound</string>
    <string name="audio_effects">Audio Effects</string>
    <string name="open_an_audio">Open an audio</string>
    <string name="text_to_audio">Text to audio</string>
    <string name="text_to_audio_2">Text to Audio</string>
    <string name="my_works">My Works</string>
    <string name="cancel">Cancel</string>
    <string name="CANCEL">Cancel</string>
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="tts_hint">"Enter text to generate audio!"</string>
    <string name="normal">Normal</string>
    <string name="girl">Girl</string>
    <string name="woman">Woman</string>
    <string name="boy">Boy</string>
    <string name="man">Man</string>
    <string name="baby">Baby</string>
    <string name="robot">Robot</string>
    <string name="alien">Alien</string>
    <string name="music">Music</string>
    <string name="echo">Echo</string>
    <string name="fast">Fast</string>
    <string name="save_done">SAVE DONE!</string>
    <string name="sea">Sea</string>
    <string name="none">None</string>
    <string name="rain">Rain</string>
    <string name="wind">Wind</string>
    <string name="children">Children</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="birds">Birds</string>
    <string name="noisy_streets">Noisy Streets</string>
    <string name="permission_rationale">Permission is important. Please grant all of them!</string>
    <string name="allow_permission">Allow the permissions</string>
    <string name="ok">OK</string>
    <string name="setting">Setting</string>
    <string name="reset_timer">00 : 00 : 00</string>
    <string name="save_file">Save file</string>
    <string name="storage_location">Storage location</string>
    <string name="quality">Quality</string>
    <string name="standard">STANDARD</string>
    <string name="standard_speed">~ 1.12MB/ minute</string>
    <string name="hd">HD</string>
    <string name="vip_speed">~ 11 MB/ minute</string>
    <string name="file_name">File name</string>
    <string name="share">Share</string>
    <string name="send_voice_message">Send voice message</string>
    <string name="delete">Delete</string>
    <string name="save_dir">Music/VoiceChanger/</string>
    <string name="create_video">Create video</string>
    <string name="set_ring_tone">Set a Ringtone</string>
    <string name="zero">0</string>
    <string name="one_hundred">100</string>
    <string name="volume">Volume</string>
    <string name="share_your_voice">Share your voice</string>
    <string name="send_message">Send your voice as message</string>
    <string name="record_audio">Record Audio</string>
    <string name="record_video">Record Video</string>
    <string name="record_audio_main">Record Audio</string>
    <string name="set_a_ring_tone">Set as ring tone</string>
    <string name="rename">Rename</string>
    <string name="RENAME">Rename</string>
    <string name="ring_tone">Ringtone</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="allow_voice_first_anno">Allow\u0020</string>
    <string name="allow_voice_second_anno">Voice changer\u0020</string>
    <string name="allow_voice_last_anno">to record audio?</string>
    <string name="allow_tts_last_anno">to save text to speech audio?</string>
    <string name="allow_storage_last_anno">to access your storage?</string>
    <string name="allow_image_last_anno">to access your images?</string>
    <string name="allow_video_last_anno">to take picture and record video?</string>
    <string name="allow_ringtone_last_anno">to set ring tone?</string>
    <string name="next">Next</string>
    <string name="enter_some_text">Enter some text</string>
    <string name="select_file">Select File</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="voice_message">Voice message</string>
    <string name="set_as_ringtone">Set as ringtone</string>
    <string name="no_previous">THERE IS NO PREVIOUS AUDIO TO PLAY ANYMORE</string>
    <string name="no_next">THERE IS NO NEXT AUDIO TO PLAY ANYMORE</string>
    <string name="confirm">Confirm</string>
    <string name="set">Set</string>
    <string name="success">Success</string>
    <string name="not_supported">THIS FILE IS NOT SUPPORTED</string>
    <string name="search_here">Search</string>
    <string name="select_picture">Select Picture</string>
    <string name="share_video">Share your video with changed voice!</string>
    <string name="saving">Saving</string>
    <string name="coverting_to_video">Coverting to video</string>
    <string name="save_done_yolo">SAVE DONE!</string>
    <string name="video_path">Video/RecordedVideos</string>
    <string name="video_saved">VIDEO SAVED!</string>
    <string name="splash_txt">Voice Changer, Audio Effects</string>
    <string name="acces_media">access your media files?</string>
    <string name="recording">Recording</string>
    <string name="language">Language</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">Report a problem</string>
    <string name="policy">Privacy Policy</string>
    <string name="about">About Us</string>
    <string name="voice_changer_with_semi">Voice Changer,</string>
    <string name="please_rate_us">We are working hard for a better user experience. We’d greatly appreciate if you can rate us.</string>
    <string name="rate">Rate</string>
    <string name="self_relieve">The best we can get &lt;3</string>
    <string name="delete_this">Are you sure you want to delete?</string>
    <string name="are_you_sure">Are you sure you want to quit without saving?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_search_hind">Search</string>
    <string name="DELETE">DELETE</string>
    <string name="cannot_speak">I cannot speak this :(</string>
    <string name="video_dir">Video/VoiceChanger/RecordedVideos/</string>
    <string name="vid_save_dir">Video/VoiceChanger/RecordedVideos</string>
    <string name="preprocess">PREPROCESSING VIDEO\'S AUDIO</string>
    <string name="no_flash">Your device is not supported for this feature</string>
    <string name="version">Version:</string>
    <string name="slow">Slow</string>
    <string name="corrupt_audio">Please choose another audio because this might be corrupted!</string>
    <string name="try_again">Please try again</string>
    <string name="tv">TV</string>
    <string name="hall">Hall</string>
    <string name="brainlet">Brainlet</string>
    <string name="scuba_diving">Scuba Diving</string>
    <string name="fan">Fan</string>
    <string name="change_lang">Are you sure you want to change language to</string>
    <string name="evil">Evil</string>
    <string name="this_cannot_be_played">This audio cannot be played, please play another!</string>
    <string name="my_recording">My Recording</string>
    <string name="set_as_ring_tone">Set as ringtone</string>
    <string name="save_audio">Save Audio</string>
    <string name="coming_soon">Coming soon</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_all">Select all</string>
    <string name="you_dont_have_any_voice_yet">You don\'t have any voice yet.</string>
    <string name="record_now">Record now!</string>
    <string name="how_was_your_day">How was your day?</string>
    <string name="get_stressed">Get stressed? Let\'s make fun of your voice!</string>
    <string name="press_here_to_start_recording">Press here to start recording!</string>
    <string name="network_requirement">Network has been turned off or your device does not support this feature!</string>
    <string name="chicken">Chicken</string>
    <string name="laugh">Laugh</string>
    <string name="night">Night</string>
    <string name="Delay">Delay</string>
    <string name="speed">Speed</string>
    <string name="pitch">Pitch</string>
    <string name="monster">Monster</string>
    <string name="phone">Telephone</string>
    <string name="chipmunk">Chipmunk</string>
    <string name="follow">Follow</string>
    <string name="speaker">Speaker</string>
    <string name="cave">Cave</string>
    <string name="pee">Pee</string>
    <string name="fart">Fart</string>
    <string name="poop">Poop</string>
    <string name="stream">Stream</string>
    <string name="clock">Clock</string>
    <string name="camp_fire">Camp Fire</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="are_you_sure_want_to_exit">Are you sure you want to exit</string>
    <string name="txt_exit">We value your feedback as a contribution to help us improve the product in a better way in the future!</string>
    <string name="app_will_exit_in_s">App will exit in %d second(s)</string>
    <string name="keyboard">Keyboard</string>
    <string name="umbrella">Umbrella</string>
    <string name="radiation">Radiation</string>
    <string name="helicopter">Helicopter</string>
    <string name="cicada">Cicada</string>
    <string name="reveal">Reveal</string>
    <string name="Anime">Anime</string>
    <string name="drunk">Drunk</string>
    <string name="helium">Helium</string>
    <string name="tremolo">Tremolo</string>
    <string name="decay_time">Decay time</string>
    <string name="turn_network_manually">You should open your network manually</string>
    <string name="level">Level</string>
    <string name="snake">Snake</string>
    <string name="tiger">Tiger</string>
    <string name="lion">Lion</string>
    <string name="fox">Fox</string>
    <string name="dragon">Dragon</string>
    <string name="frog">Frog</string>
    <string name="bee">Bee</string>
    <string name="duck">Duck</string>
    <string name="bunny">Bunny</string>
    <string name="email_feedback">info@begamob.com</string>
    <string name="nervous">Nervous</string>
    <string name="detect_new_audio">Audio has just been detected!</string>
    <string name="try_new_audio">Why don\'t you try your audio with new effects?</string>
    <string name="choose_your_own_ambient_sound">Choose your own <b><u>ambient sound!</u></b></string>
    <string name="rapper">Rapper</string>
    <string name="laggy">Laggy</string>
    <string name="selection">Selection</string>
</resources>