<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:background="@drawable/bg_bottom_sheet">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:id="@+id/bottom_sheet_rename"
            android:gravity="center_vertical"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginStart="28dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bottom_rename"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black"
                android:textSize="16sp"
                android:text="@string/rename"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/bottom_sheet_share"
            android:layout_marginStart="28dp"
            android:paddingVertical="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bottom_share"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/color_black"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="19dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/bottom_sheet_set_as_ring_tone"
            android:gravity="center_vertical"
            android:layout_marginStart="28dp"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bottom_ringtone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_as_ringtone"
                android:layout_gravity="center_vertical"
                android:textColor="@color/color_black"
                android:textSize="16sp"
                android:layout_marginStart="18dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/bottom_sheet_delete"
            android:gravity="center_vertical"
            android:layout_marginStart="28dp"
            android:paddingVertical="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bottom_delete"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/color_black"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="18dp"/>
        </LinearLayout>
        <TextView
            android:visibility="gone"
            android:id="@+id/bottom_sheet_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/CANCEL"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/unpicked_color"
            android:layout_marginBottom="24dp"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>